# esphome-sandbox

./: .gitignore  .gitmodules  BSECSensor.h  CE_BSEC.h  README.md  bedroom-blinds.yaml  bedroomblinds.yaml  bedroomblinds_old.yaml  bedroomblinds_v2.yaml  blinds.yaml  example-secrets.yaml  guest-room-blinds.yaml  guestroomblinds.yaml  office-blinds.yaml  office-sensor.yaml  office.yaml  pyproject.toml
custom_components/: bme680_bsec
