[tool.poetry]
name = "esphome-sandbox"
version = "0.0.1"
description = "My setup for all my esphome devices"
authors = [
  "Luiz Ribeiro <luizribeiro@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.9"
esphome = "2022.12.8"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
